<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_choose_patient"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/btn_choose_patient" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/btn_settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/btn_logout" />

    </group>

    <item android:title="@string/msg_information">

        <menu>
            <item
                android:id="@+id/nav_site"
                android:icon="@drawable/ic_cloud_black_24dp"
                android:title="@string/btn_site" />
        </menu>

    </item>

</menu>