<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.unibg.app3dsat.Test">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/testImgView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/answerBtnsLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout3"
            android:layout_alignParentStart="false"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="@dimen/training_buttons"
                android:layout_height="@dimen/training_buttons"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:onClick="OnClickFirst"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="@dimen/training_buttons"
                android:layout_height="@dimen/training_buttons"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:onClick="OnClickSecond"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="@dimen/training_buttons"
                android:layout_height="@dimen/training_buttons"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:onClick="OnClickThird"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_4"
                android:layout_width="@dimen/training_buttons"
                android:layout_height="@dimen/training_buttons"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:onClick="OnClickFourth"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btn_starttest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClickTest"
                android:text="@string/btn_test" />

            <Button
                android:id="@+id/buttonQuit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClickQuit"
                android:text="@string/btn_quit" />

            <TextView
                android:id="@+id/statusView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_demo"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonSkip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:onClick="OnClickSkip"
                    android:text="@string/btn_skip" />
            </FrameLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>